# bl4_loot_filter

./: README.md  __init__.py  build.py  config.json  legendaries.json  pyproject.toml
