[project]
name = "bl4_loot_filter"
version = "1"
authors = [{ name = "Lango" }]
description = "Teleport and delete* loot. Loot must be actively loaded to teleport or delete and it's draw distance isnt great. *Deleting loot just teleports it into the void which may result in phantom legendaries on your radar."

[tool.sdkmod]
name = "Loot Filter"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/yeti-bl4-sdk/raw/refs/heads/main/GroundLootHelpers/GroundLootHelpers.sdkmod"
version = "1"
coop_support = "ClientSide"