[project]
name = "bl4_loot_filter"
version = "1"
authors = [{ name = "Lango" }]
description = "Filter loot, teleporting the loot you want for easy pickup and deleting the loot you don't."

[tool.sdkmod]
name = "Loot Filter"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/jlangowells/bl4_loot_filter/releases"
version = "1"
coop_support = "ClientSide"